# ALICE-MCH-DCS-source

./: README.md
FREDServers/fredserver002/: CMakeLists.txt  Makefile  runFRED.sh
FREDServers/fredserver002/CI/: kaniko.gitlab-ci.yml  packages.txt  parser.sh  run_dns.sh
FREDServers/fredserver002/boards/: mch_solar_gbtx_clocks_SWITCHON.sqc  mch_solar_gbtx_phal_Static.sqc
FREDServers/fredserver002/boards/cru_register/commands/: CRU_Register_READ.sqc  CRU_Register_WRITE.sqc
FREDServers/fredserver002/boards/solar/: solarboard.conf
FREDServers/fredserver002/boards/solar/commands/: mch_solar_boardtemp_read.sqc  mch_solar_gbtx_clocks_READ.sqc  mch_solar_gbtx_clocks_SWITCHOFF.sqc  mch_solar_gbtx_clocks_SWITCHON.sqc  mch_solar_gbtx_clocks_SWITCHON2.sqc
FREDServers/fredserver002/config/: fred.conf
FREDServers/fredserver002/examples/CRU/sections/: cru-map.section
FREDServers/fredserver002/examples/IC/sections/: ic.section
FREDServers/fredserver002/examples/MAPI/Iterativemapi/: README.md  averagetemp.cpp  averagetemp.h
FREDServers/fredserver002/examples/SWT/sections/: inner_barrel.section
FREDServers/fredserver002/include/FREDServer/Alfred/: command.h  info.h  print.h  rpcinfo.h
FREDServers/fredserver002/include/FREDServer/Fred/: alfrpcinfo.h  llaalfrpcinfo.h  queue.h  section.h
FREDServers/fredserver002/include/FREDServer/Mapi/: sampa_config.h
FREDServers/fredserver002/include/FREDServer/Parser/: processmessage.h
FREDServers/fredserver002/include/dim/: dim.h
FREDServers/fredserver002/sections/: .mapi_example.section.swp  SAMPA_MAPICH10L.section  SAMPA_MAPICH10R.section  SAMPA_MAPICH1L.section  SAMPA_MAPICH2L.section  SAMPA_MAPICH3R.section  SAMPA_MAPICH4R.section  SAMPA_MAPICH7L.section  SAMPA_MAPICH7R.section  SAMPA_MAPICH8L.section  SAMPA_MAPICH8R.section  SolarCH10L.section  SolarCH10R.section  SolarCH1L.section  SolarCH2L.section  SolarCH3R.section  SolarCH4R.section  SolarCH7L.section  SolarCH7R.section  SolarCH8L.section  SolarCH8R.section  cru-map.cru  cru-register.section
FREDServers/fredserver002/src/: main.cpp
FREDServers/fredserver002/src/Alfred/: README.md  client.cpp  service.cpp
FREDServers/fredserver002/src/Fred/: ._llalock.cpp  crualfrpcinfo.cpp  cruregistercommand.cpp  fred.cpp  indefinitemapi.cpp  mappedcommand.cpp  queue.cpp  section.cpp  selectcommand.cpp  subscribecommand.cpp
FREDServers/fredserver002/src/Fred/Mapi/: ._mapi.cpp  (+2 more)
FREDServers/fredserver002/src/Parser/: utility.cpp
(+211 files in other folders)
